# StudyDungeon

./: .codacy.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  StudyDungeon.cpp  StudyDungeon.sln  StudyDungeon.vcxproj  StudyDungeon.vcxproj.filters  StudyDungeon_8cpp.html  annotated.html  artwork_8cpp.html  artwork_8h.html  artwork_8h_source.html  card__types_8h.html  card__types_8h_source.html  classBot.html  classConsoleUI_1_1ANSIArt.html  classConsoleUI_1_1AsciiArt.html  classConsoleUI_1_1Button.html  classConsoleUI_1_1ConsoleWindow.html  classConsoleUI_1_1Menu.html  classConsoleUI_1_1Scene.html  classConsoleUI_1_1UIManager.html  classFibonacciScene.html  classFlashCard.html  classFlashCardDeck.html  classFlashcardApp_1_1BrowseDecksScene.html  classFlashcardApp_1_1EditDecksScene.html  classFlashcardApp_1_1EditFlashcardScene.html  classFlashcardApp_1_1FlashcardScene.html  classFlashcardApp_1_1ResultsScene.html  classFlashcardEdit_1_1EditDeckScene.html  classFlashcardEdit_1_1EditFlashcardScene.html  classGame.html  classGameScene.html  classGridMenu.html  (+113 more)
.github/workflows/: cmake.yml  compile.yml  document.yml  documentation.yml  msbuild.yml  pre-commit.yml  windows-build.yml  windows-test.yml  windows.yml
Decks/: BIOC192.deck  agile.deck  animal_collections.deck  baby_animals.deck  capitals.deck  captials.deck  computer_acronyms.deck  cosc345-agile.deck  cosc345-heap.deck  cosc345-optmisation.deck  cosc345-stack.deck  cosc349-cloudoverview.deck  cosc349-elasticity.deck  example.deck  example1.deck  example2.deck  fake_deck.txt  general_knowledge.deck  heap.deck  optimisation.deck  pokemon.deck  stack.deck  translate_german.deck
StudyDungeon/: StudyDungeon.cpp  StudyDungeon.vcxproj.filters
app/: CMakeLists.txt  StudyDungeon.cpp  studydungeon.cpp
artwork/: ARCH.txt  CARD.txt  CARD_SELECTED.txt  HEART.txt  HEART_EMPTY.txt  SLIME.txt  STUDY_DUNGEON.txt  pink.txt  test.txt
cmake/: Docs.cmake  Warnings.cmake
docs/: Doxyfile  Doxyfile.in  main.md
includes/: _util.h  artwork.h  card_types.h  deck.cpp  deck.h  gameloop.cpp  gameloop.h  menu.cpp  menu.h  player.cpp  player.h  playing_card.cpp  playing_card.h  util.cpp  util.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  (+47 more)
src/: CMakeLists.txt  art.txt  artwork.cpp  artwork.h  card_types.h  deck.cpp  deck.h  edit_flashcard.cpp  edit_flashcard.h  example_test.cpp  example_test.h  flashcard_scene.cpp  flashcard_scene.h  game_scene.cpp  game_scene.h  gameloop.cpp  gameloop.h  howto_scene.cpp  howto_scene.h  mainmenu_scene.cpp  mainmenu_scene.h  menu.cpp  menu.h  player.cpp  player.h  playing_card.cpp  playing_card.h  settings_scene.cpp  settings_scene.h  test_scene.cpp  test_scene.h  util.cpp  util.h
tests/: CMakeLists.txt  deck_test.cpp  flashcard_test.cpp  gameloop_test.cpp  menu_test.cpp  player_test.cpp  playing_card_test.cpp  settings_test.cpp  tests.cpp  util_test.cpp
tests/test_decks/: example1.deck  example2.deck  fake_deck.txt
